create data provider for pet store and renamed all POJO files as per framework

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Nish\AppData\Local\Temp\testng-eclipse--1468161145\testng-customsuite.xml</span>
+                    <span>C:\Users\Nish\AppData\Local\Temp\testng-eclipse-2062291572\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.Pet_test" class="method navigator-link" hash-for-method="Test_FindPet">Test_FindPet</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,17 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.Pet_test" class="method navigator-link" hash-for-method="Delete_Pet">Delete_Pet</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.DataDriven_Pet_test" class="method navigator-link" hash-for-method="Test_AddPet(1.0, 10.0, Labrador, Bruno, 50.0, bruno, available)">Test_AddPet(1.0, 10.0, Labrador, Bruno, 50.0, bruno, available)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.Pet_test" class="method navigator-link" hash-for-method="Test_AddPet">Test_AddPet</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.DataDriven_Pet_test" class="method navigator-link" hash-for-method="Test_AddPet(2.0, 9.0, German Shephard, Milo, 25.0, milo, available)">Test_AddPet(2.0, 9.0, German Shephard, Milo, 25.0, milo, available)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.Pet_test" class="method navigator-link" hash-for-method="Update_Pet">Update_Pet</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.DataDriven_Pet_test" class="method navigator-link" hash-for-method="Test_DeletePet">Test_DeletePet</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="api.testcases.DataDriven_Pet_test" class="method navigator-link" hash-for-method="Test_FindPet">Test_FindPet</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,102 +133,40 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">api.testcases.Pet_test</span>
+              <img src="passed.png"/>
+              <span class="class-name">api.testcases.DataDriven_Pet_test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Test_AddPet(1.0, 10.0, Labrador, Bruno, 50.0, bruno, available)">
+                  </a> <!-- Test_AddPet(1.0, 10.0, Labrador, Bruno, 50.0, bruno, available) -->
+                  <span class="method-name">Test_AddPet</span>
+                  <span class="parameters">(1.0,10.0,Labrador,Bruno,50.0,bruno,available)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Test_AddPet(2.0, 9.0, German Shephard, Milo, 25.0, milo, available)">
+                  </a> <!-- Test_AddPet(2.0, 9.0, German Shephard, Milo, 25.0, milo, available) -->
+                  <span class="method-name">Test_AddPet</span>
+                  <span class="parameters">(2.0,9.0,German Shephard,Milo,25.0,milo,available)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Test_DeletePet">
+                  </a> <!-- Test_DeletePet -->
+                  <span class="method-name">Test_DeletePet</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="Test_FindPet">
                   </a> <!-- Test_FindPet -->
                   <span class="method-name">Test_FindPet</span>
-                  <div class="stack-trace">java.lang.AssertionError: 1 expectation failed.
-JSON path name doesn&apos;t match.
-Expected: seal
-  Actual: puppy
-
-	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
-	at org.codehaus.groovy.reflection.CachedConstructor.invoke(CachedConstructor.java:73)
-	at org.codehaus.groovy.runtime.callsite.ConstructorSite$ConstructorSiteNoUnwrapNoCoerce.callConstructor(ConstructorSite.java:108)
-	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCallConstructor(CallSiteArray.java:57)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:263)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:277)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure.validate(ResponseSpecificationImpl.groovy:512)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure$validate$1.call(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.validateResponseIfRequired(ResponseSpecificationImpl.groovy:696)
-	at io.restassured.internal.ResponseSpecificationImpl.this$2$validateResponseIfRequired(ResponseSpecificationImpl.groovy)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.codehaus.groovy.runtime.callsite.PlainObjectMetaMethodSite.doInvoke(PlainObjectMetaMethodSite.java:43)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite$PogoCachedMethodSiteNoUnwrapNoCoerce.invoke(PogoMetaMethodSite.java:198)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite.callCurrent(PogoMetaMethodSite.java:62)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:185)
-	at io.restassured.internal.ResponseSpecificationImpl.body(ResponseSpecificationImpl.groovy:270)
-	at io.restassured.specification.ResponseSpecification$body$0.callCurrent(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.body(ResponseSpecificationImpl.groovy:117)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.body(ValidatableResponseOptionsImpl.java:244)
-	at api.testcases.Pet_test.Test_FindPet(Pet_test.java:102)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
-	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:686)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:230)
-	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:63)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:992)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:203)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:154)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:134)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-	at org.testng.TestRunner.privateRun(TestRunner.java:739)
-	at org.testng.TestRunner.run(TestRunner.java:614)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:421)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:413)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:373)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:312)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1274)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1208)
-	at org.testng.TestNG.runSuites(TestNG.java:1112)
-	at org.testng.TestNG.run(TestNG.java:1079)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:293)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:91)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">api.testcases.Pet_test</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Delete_Pet">
-                  </a> <!-- Delete_Pet -->
-                  <span class="method-name">Delete_Pet</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Test_AddPet">
-                  </a> <!-- Test_AddPet -->
-                  <span class="method-name">Test_AddPet</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Update_Pet">
-                  </a> <!-- Update_Pet -->
-                  <span class="method-name">Update_Pet</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -245,7 +174,7 @@ Expected: seal
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Nish\AppData\Local\Temp\testng-eclipse--1468161145\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Nish\AppData\Local\Temp\testng-eclipse-2062291572\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -254,7 +183,7 @@ Expected: seal
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;api.testcases.Pet_test&quot;/&gt;
+      &lt;class name=&quot;api.testcases.DataDriven_Pet_test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -297,20 +226,20 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Test_AddPet')
-data.setCell(0, 2, 'api.testcases.Pet_test')
-data.setCell(0, 3, 1993);
+data.setCell(0, 2, 'api.testcases.DataDriven_Pet_test')
+data.setCell(0, 3, 1928);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Test_FindPet')
-data.setCell(1, 2, 'api.testcases.Pet_test')
-data.setCell(1, 3, 152);
+data.setCell(1, 2, 'api.testcases.DataDriven_Pet_test')
+data.setCell(1, 3, 172);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Update_Pet')
-data.setCell(2, 2, 'api.testcases.Pet_test')
-data.setCell(2, 3, 116);
+data.setCell(2, 1, 'Test_AddPet')
+data.setCell(2, 2, 'api.testcases.DataDriven_Pet_test')
+data.setCell(2, 3, 162);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Delete_Pet')
-data.setCell(3, 2, 'api.testcases.Pet_test')
-data.setCell(3, 3, 98);
+data.setCell(3, 1, 'Test_DeletePet')
+data.setCell(3, 2, 'api.testcases.DataDriven_Pet_test')
+data.setCell(3, 3, 126);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -341,28 +270,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">api.testcases.Pet_test</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">CreatePetData</span>
+              <div class="chronological-class-name">api.testcases.DataDriven_Pet_test</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Test_AddPet(1.0, 10.0, Labrador, Bruno, 50.0, bruno, available)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">Test_AddPet</span>
-                <span class="method-start">118 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
+                <span class="method-name">Test_AddPet(2.0, 9.0, German Shephard, Milo, 25.0, milo, available)</span>
+                <span class="method-start">1929 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">Test_FindPet</span>
-                <span class="method-start">2116 ms</span>
+                <span class="method-start">2096 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Update_Pet</span>
+                <span class="method-name">Test_DeletePet</span>
                 <span class="method-start">2271 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Delete_Pet</span>
-                <span class="method-start">2388 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
